--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -32,7 +32,8 @@
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li>
-                            <li class="active"><a href="<?php echo $this->url('zfcuser/login') ?>"><?php echo $this->translate('Home') ?></a></li>
+                            <li class="active"><a href="<?php echo $this->url('zfcuser/login') ?>"><?php echo $this->translate('User') ?></a></li>
+                            <li class="active"><a href="<?php echo $this->url('unit') ?>"><?php echo $this->translate('Unit') ?></a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
