finalize basic mvc structure

--- a/module/Gameunit/view/Gameunit/index/index.phtml
+++ b/module/Gameunit/view/Gameunit/index/index.phtml
@@ -1,3 +1,10 @@
+<?php
+/**
+ * @author Marco Bunge
+ * @copyright 2012 Marco Bunge <efika@rubymatrix.de>
+ */
+
+?>
 <div class="hero-unit">
     <h1>Game Units</h1>
 </div>
