--- a/module/Gameunit/view/Gameunit/unit/index.phtml
+++ b/module/Gameunit/view/Gameunit/unit/index.phtml
@@ -1,5 +1,13 @@
+<?php
+/**
+ * @author Marco Bunge
+ * @copyright 2012 Marco Bunge <efika@rubymatrix.de>
+ */
+
+?>
 <div class="row">
-    <div class="span4">
-        <h2>Unit Module</h2>
+    <div class="span12">
+        <h2>Units</h2>
+        <?php echo $this->linkList ?>
     </div>
 </div>
