--- a/module/Gameunit/view/Gameunit/building/detail.phtml
+++ b/module/Gameunit/view/Gameunit/building/detail.phtml
@@ -5,9 +5,14 @@
  */
 
 ?>
+
 <div class="row">
     <div class="span4">
-        <h2>Buildings</h2>
+        <h2>Units</h2>
+        <h3>Overview</h3>
         <?php echo $this->linkList ?>
+    </div>
+    <div class="span8">
+
     </div>
 </div>
